# FasterAPI

./: .branch-cleanup  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag-release.yml  benchmark.yml  ci.yml  docs.yml  release.yml  sync-benchmark-readme.yml
FasterAPI/: __init__.py  _version.py  app.py  asgi_compat.py  background.py  cli.py  concurrency.py  datastructures.py  dependencies.py  exceptions.py  jwt_auth.py  log_config.py  middleware.py  params.py  production.py  redis_cache.py  request.py  response.py  router.py  security.py  sqlalchemy_ext.py  staticfiles.py  status.py  templating.py  testclient.py  types.py  websocket.py
FasterAPI/openapi/: generator.py  ui.py
acknowledgments/: index.html
api-reference/: index.html
benchmarks/: README.md  baseline.json  check_regressions.py  compare.py  export_pr_benchmarks.py  index.html  profile_routing.py  update_readme_benchmarks.py
benchmarks/fiber/: .gitignore  go.mod  main.go
docs/: acknowledgments.md  api-reference.md  architecture.md  benchmark-methodology.md  benchmarks.md  changelog.md  faq.md  getting-started.md  index.md  migration-from-fastapi.md  python-313.md  tutorial-crud.md
docs/advanced/: additional-responses.md  async-tests.md  behind-proxy.md  bigger-apps.md  custom-response.md  index.md  lifespan.md  openapi-customization.md  response-cookies-headers.md  server-sent-events.md  settings.md  sub-applications.md  templates.md  testing-overrides.md  using-request.md
docs/concepts/: async-await.md  concurrency.md  msgspec-vs-pydantic.md  performance-roadmap-v04.md  radix-tree-routing.md  sub-interpreters.md  types-intro.md
docs/database/: async-db.md  index.md  nosql-mongodb.md  sqlalchemy.md
docs/deployment/: cloud.md  docker.md  gunicorn.md  https.md  index.md  kubernetes.md  nginx-traefik.md  systemd.md
docs/how-to/: index.md
docs/overrides/: main.html
docs/security/: http-basic-auth.md  index.md  oauth2-jwt.md  oauth2-scopes.md
docs/tutorial/: background-tasks.md  dependencies.md  error-handling.md  form-and-files.md  index.md  metadata.md  middleware.md  path-parameters.md  query-parameters.md  request-body.md  response-model.md  websockets.md
examples/: basic_app.py  full_crud_app.py  production_example.py  websocket_app.py
faster/: app.py  dependencies.py
getting-started/: index.html
migration-from-fastapi/: index.html
python-313/: index.html
search/: search_index.json
tests/: __init__.py  test_app_lifecycle.py  test_background.py  test_benchmark.py  test_concurrency.py  test_coverage_gaps.py  test_datastructures.py  test_deps.py  test_ecosystem.py  test_exceptions.py  test_formdata.py  test_integration.py  test_middleware.py  test_new_features.py  test_openapi.py  test_params.py  test_phase3.py  test_production_features.py  test_response.py  test_responses.py  test_routing.py  test_testclient.py  test_websocket.py
tutorial-crud/: index.html
