[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faster-api-web"
version = "0.1.0"
description = "FasterAPI — A high-performance ASGI web framework. FastAPI speed, without the wait."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eshwar Chandra Vidhyasagar Thedla", email = "thedla.ecvs@gmail.com" },
]
keywords = [
    "web", "framework", "asgi", "api", "rest", "async",
    "msgspec", "uvloop", "high-performance", "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.18.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19.0"]
all = ["uvloop>=0.19.0"]
dev = [
    "uvloop>=0.19.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]
benchmark = [
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/EshwarCVS/FasterAPI"
Repository = "https://github.com/EshwarCVS/FasterAPI"
Documentation = "https://github.com/EshwarCVS/FasterAPI#readme"
Issues = "https://github.com/EshwarCVS/FasterAPI/issues"
Changelog = "https://github.com/EshwarCVS/FasterAPI/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["FasterAPI"]
