[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "faster-api-web"
dynamic = ["version"]
description = "FasterAPI — A high-performance ASGI web framework. FastAPI speed, without the wait."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eshwar Chandra Vidhyasagar Thedla", email = "thedla.ecvs@gmail.com" },
]
keywords = [
    "web", "framework", "asgi", "api", "rest", "async",
    "msgspec", "uvloop", "high-performance", "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.18.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19.0"]
all = ["uvloop>=0.19.0"]
dev = [
    "uvloop>=0.19.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.8.0",
    "tox>=4.0.0",
]
benchmark = [
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
test = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/FasterApiWeb/FasterAPI"
Repository = "https://github.com/FasterApiWeb/FasterAPI"
Documentation = "https://fasterapiweb.github.io/FasterAPI/"
Issues = "https://github.com/FasterApiWeb/FasterAPI/issues"
Changelog = "https://github.com/FasterApiWeb/FasterAPI/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

# Test modules: strict typing every test would be noisy; library stays strict above.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["FasterAPI", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B008",
    "B023",
    "SIM115",
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/check_regressions.py" = ["E402"]
"benchmarks/export_pr_benchmarks.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["FasterAPI"]

[tool.hatch.version]
source = "vcs"
